--- a/docs/index.qmd
+++ b/docs/index.qmd
@@ -1,13 +1,9 @@
 ---
-title: My even better website
+title: Heewon's Website
 format: html
 embed-resources: true
 ---
 
-## Section 1
+## Homework
 
-This is so cool.
-
-## Section 2
-
-And fun.
+[HW5](HW5.html)
